--- a/2013/scss/application.scss
+++ b/2013/scss/application.scss
@@ -16,5 +16,8 @@ $secondary-color: $cream;
 @import "typography";
 
 @import "layout";
+@import "components";
 @import "header";
+
 @import "home";
+@import "speakers";
