--- a/2013/scss/home.scss
+++ b/2013/scss/home.scss
@@ -1,4 +1,5 @@
 #home{
+  #header{border-bottom: none;}
   .info{margin-top: 40px; margin-bottom: 40px;}
 
   .container{
@@ -14,49 +15,7 @@
         font-size: 40px;
       }
     }
-
-    .speakers{
-      margin: 0 0 0 0; padding: 0 0 0 0;
-      text-align: center;
-
-      @media screen and (min-width: 600px){ margin: 10px;}
-      @media screen and (min-width: 800px){ margin: 15px;}
-
-      li{
-        margin: 0; padding: 0;
-        display: inline-block;
-        text-align: center;
-        width: 120px;
-
-        @media screen and (min-width: 600px){ width: 140px;}
-        @media screen and (min-width: 900px){ width: 160px;}
-
-        img{
-          display: block;
-          margin: 10px auto;
-          width: 80px; height: 80px;
-          border-radius: 40px;
-          box-shadow: 0 0 0 10px $secondary-color;
-
-          @media screen and (min-width: 600px){
-            width: 100px; height: 100px;
-            border-radius: 50px;
-          }
-        }
-
-        a{
-          text-decoration: none;
-          color: $primary-color;
-          font-weight: 600;
-          display: block;
-          margin: 0 auto;
-          border: none;
-        }
-
-        span{color: $gray-light;}
-      }
-    }
-
+    
     .article{
       @include border-box;
       width: 100%;
