--- a/2013/assets/application.css
+++ b/2013/assets/application.css
@@ -544,7 +544,7 @@ ul.actions li a, a.button {
   border-bottom: none; }
 #home .info {
   margin-top: 40px;
-  margin-bottom: 40px; }
+  margin-bottom: 10px; }
 #home .container h2 {
   margin: 0;
   font-family: 'brandon-grotesque';
@@ -568,11 +568,9 @@ ul.actions li a, a.button {
   text-align: left; }
   @media screen and (min-width: 600px) {
     #home .container .article {
-      width: 19%; }
-      #home .container .article.news {
-        width: 59%; }
+      width: 29%; }
       #home .container .article.contact {
-        width: 39%; }
+        width: 29%; }
       #home .container .article.twitter {
         width: 39%; } }
   #home .container .article.contact {
@@ -642,7 +640,9 @@ ul.actions li a, a.button {
 
 .twitter-timeline, #twitter-widget-0 {
   display: block;
-  width: 100%; }
+  width: 100%;
+  height: 300px;
+  background: #f2ecce; }
 
 .speakers {
   margin: 0 0 0 0;
