--- a/2013/scss/application.scss
+++ b/2013/scss/application.scss
@@ -14,6 +14,7 @@ $secondary-color: $cream;
 @import "mixins";
 @import "normalize";
 @import "typography";
+@import "icons";
 
 @import "layout";
 @import "components";
