--- a/2013/assets/application.css
+++ b/2013/assets/application.css
@@ -729,29 +729,29 @@ ul.actions li a, a.button {
   height: 300px;
   background: #f2ecce; }
 
-.speakers {
+.speakers, .talks {
   margin: 0 0 0 0;
   padding: 0 0 0 0;
   text-align: center; }
   @media screen and (min-width: 600px) {
-    .speakers {
+    .speakers, .talks {
       margin: 10px; } }
   @media screen and (min-width: 800px) {
-    .speakers {
+    .speakers, .talks {
       margin: 15px; } }
-  .speakers li {
+  .speakers li, .talks li {
     margin: 0;
     padding: 0;
     display: inline-block;
     text-align: center;
     width: 120px; }
     @media screen and (min-width: 600px) {
-      .speakers li {
+      .speakers li, .talks li {
         width: 140px; } }
     @media screen and (min-width: 900px) {
-      .speakers li {
+      .speakers li, .talks li {
         width: 160px; } }
-    .speakers li img {
+    .speakers li img, .talks li img {
       display: block;
       margin: 10px auto;
       width: 80px;
@@ -759,16 +759,27 @@ ul.actions li a, a.button {
       border-radius: 40px;
       box-shadow: 0 0 0 10px #f2ecce; }
       @media screen and (min-width: 600px) {
-        .speakers li img {
+        .speakers li img, .talks li img {
           width: 100px;
           height: 100px;
           border-radius: 50px; } }
-    .speakers li a {
+    .speakers li a, .talks li a {
       text-decoration: none;
       color: #aa0000;
       font-weight: 600;
       display: block;
       margin: 0 auto;
       border: none; }
-    .speakers li span {
+    .speakers li span, .talks li span {
       color: #999999; }
+
+.talks li {
+  display: block;
+  text-align: left;
+  padding-bottom: 40px; }
+  .talks li a, .talks li span {
+    display: block;
+    width: 160px;
+    padding: 0;
+    margin: 0;
+    text-align: center; }
