--- a/2013/scss/speakers.scss
+++ b/2013/scss/speakers.scss
@@ -1,4 +1,4 @@
-.speakers{
+.speakers, .talks{
   margin: 0 0 0 0; padding: 0 0 0 0;
   text-align: center;
 
@@ -37,5 +37,21 @@
     }
 
     span{color: $gray-light;}
+  }
+}
+
+.talks{
+  li{
+    display: block;
+    text-align: left;
+    padding-bottom: 40px;
+
+    a, span{
+      display: block;
+      width: 160px;
+      padding: 0;
+      margin: 0;
+      text-align: center;
+    }
   }
 }
