layout fix: added space between talks when there is more content

--- a/2013/scss/speakers.scss
+++ b/2013/scss/speakers.scss
@@ -46,7 +46,7 @@
     text-align: left;
     clear: both;
     width: auto;
-    padding: 0 0 0 180px;
+    padding: 0 0 20px 180px;
 
     div.speaker{
       width: 160px;
