--- a/2013/assets/application.css
+++ b/2013/assets/application.css
@@ -778,7 +778,7 @@ ul.actions li a, a.button {
   text-align: left;
   clear: both;
   width: auto;
-  padding: 0 0 0 180px; }
+  padding: 0 0 20px 180px; }
   .talks > li div.speaker {
     width: 160px;
     float: left;
