--- a/2013/scss/speakers.scss
+++ b/2013/scss/speakers.scss
@@ -1,10 +1,11 @@
 .speakers, .talks{
-  margin: 0; padding: 0 0 0 0;
+  margin: 0 1%; padding: 0 0 0 0;
   text-align: center;
+  width: 98%;
 
-  @media screen and (min-width: 600px){ margin: 10px auto;}
-  @media screen and (min-width: 800px){ margin: 15px 50px;}
-  @media screen and (min-width: 900px){ margin: 15px 100px;}
+  @media screen and (min-width: 600px){ margin: 10px 2%; width: 96%;}
+  @media screen and (min-width: 800px){ margin: 15px 5%; width: 90%;}
+  @media screen and (min-width: 900px){ margin: 15px 10%; width: 80%;}
 
   >li{
     margin: 0; padding: 0;
